--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "author": "RDP07",
   "license": "ISC",
   "dependencies": {
-    "es-module-loader": "^2.2.8",
-    "es6-module-loader": "^0.17.11",
-    "jquery": "^2.2.4",
-    "material-design-lite": "^1.3.0",
-    "systemjs": "^0.19.47",
+    "es-module-loader": "2.2.8",
+    "es6-module-loader": "0.17.11",
+    "jquery": "3.3.1",
+    "material-design-lite": "1.3.0",
+    "systemjs": "0.19.47",
     "traceur": "0.0.108"
   },
   "devDependencies": {
-    "lite-server": "^2.3.0"
+    "lite-server": "2.3.0"
   }
 }
